welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:-39: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-38: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-35: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^Runner:-20: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^Runner:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^